tests/rosetta/transpiler/Clojure/carmichael-3-strong-pseudoprimes.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/carmichael-3-strong-pseudoprimes.clj:27:120).
Unable to resolve symbol: d in this context

Full report at:
/tmp/clojure-7111590571994859789.edn
